--- a/Pages/Movies/Index.cshtml
+++ b/Pages/Movies/Index.cshtml
@@ -10,6 +10,22 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+<form>
+    <div class="form-group row">
+        <label class="col-2 text-right" asp-for="SearchString">Title</label>
+        <div class="col-4">
+            <input type="text" class="form-control" asp-for="SearchString" placeholder="Enter searching text..." />
+        </div>
+        <div class="col-3">
+            <select class="form-control" asp-for="MovieGenre" asp-items="Model.Genres">
+                <option value="">All</option>
+            </select>
+        </div>
+        <div class="col-3">
+            <input type="submit" class="btn btn-block btn-primary" value="Search" />
+        </div>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
@@ -25,7 +41,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Movie[0].Price)
             </th>
-            <th></th>
+            <th>
+                Commands
+            </th>
         </tr>
     </thead>
     <tbody>
